[build-system]
requires = ["scikit-build-core", "nanobind>=2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "SHARPlib"
version = "1.0.0b1"
description = "Sounding and Hodograph Analysis and Research Program Library (SHARPlib) for processing vertical profiles of meteorological/atmospheric sounding data."
readme = "README.md"
authors = [
    { name = "Kelton Halbert", email = "kelton.halbert@noaa.gov" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]
keywords = [
    "meteorology", 
    "weather",
    "atmospheric science",
    "atmosphere",
    "soundings",
    "skewt",
    "hodograph"
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22.0"
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"homepage" = "https://github.com/keltonhalbert/SHARPlib"
"Documentation" = "https://keltonhalbert.github.io/SHARPlib"
"Bluesky" = "https://bsky.app/profile/stormscale.io"

[tool.scikit-build]
cmake.version = ">=3.15"
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
BUILD_PYBIND = true

[tool.pytest.ini_options]
testpaths = ["tests/python"]

## To-Do: Learn cibuildwheel and get it going
## on either github or gitlab. Probably 
## github, since the gitlab runner for vlab
## only supports Linux
[tool.cibuildwheel]
build-verbosity = 1 

test-command = "pytest {project}"
test-requires = "pytest"
