[build-system]
requires = ["scikit-build-core", "nanobind>=2.9.2"]
build-backend = "scikit_build_core.build"

[project]
name = "SHARPlib"
dynamic = ["version"]
description = "Sounding and Hodograph Analysis and Research Program Library (SHARPlib) for processing vertical profiles of meteorological/atmospheric sounding data."
readme = "README.md"
authors = [
    { name = "Kelton Halbert", email = "kelton.halbert@noaa.gov" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]
keywords = [
    "meteorology", 
    "weather",
    "atmospheric science",
    "atmosphere",
    "soundings",
    "skewt",
    "hodograph"
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0"
]

[project.optional-dependencies]
test = [
        "pytest",
        "pandas",
        "fastparquet"
    ]

[project.urls]
"homepage" = "https://github.com/keltonhalbert/SHARPlib"
"Documentation" = "https://keltonhalbert.github.io/SHARPlib"
"Bluesky" = "https://bsky.app/profile/stormscale.io"

[tool.scikit-build]
cmake.version = ">=3.15"
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = [
    "src/nanobind/_version.py", 
    "src/nanobind/nwsspc/**",
    "external/**",
]

[tool.scikit-build.cmake.define]
BUILD_PYBIND = true

[tool.setuptools_scm]  # Section required
write_to = "src/nanobind/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests/python"]

[tool.cibuildwheel]
build-verbosity = 1 
archs = ["auto64"]
skip = ["pp*", "*i686", "*win32", "*musllinux*"]
enable = []
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

test-command = "unset SETUPTOOLS_SCM_PRETEND_VERSION && pytest {project}/tests/python"
test-requires = ["pytest", "pandas", "fastparquet"]

[tool.pyright]
reportMissingModuleSource = "none"
reportUnknownVariableType = false 
reportUnknownMemberType = "none"

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
